--- a/pastry/templates/pastry-base.html
+++ b/pastry/templates/pastry-base.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>
+    {% block title %}{% endblock %} | {{ request.site.name|title }}
+  </title>
 </head>
 <body>
+  {% block body %}
+  {% endblock %}
 </body>
 </html>
