setup webpack and gulp to collect and compile scripts.

--- a/pastry/home/templates/home.html
+++ b/pastry/home/templates/home.html
@@ -3,4 +3,6 @@
 {% block title %}首页{% endblock %}
 
 {% block body %}
+  {% load staticfiles %}
+  <script src="{% static 'scripts/home.js' %}"></script>
 {% endblock %}
