--- a/pastry/templates/pastry-base.html
+++ b/pastry/templates/pastry-base.html
@@ -5,6 +5,8 @@
   <title>
     {% block title %}{% endblock %} | {{ request.site.name|title }}
   </title>
+  {% load staticfiles %}
+  <script src="{% static 'scripts/init.js' %}"></script>
 </head>
 <body>
   {% block body %}
