--- a/pastry/home/templates/home.html
+++ b/pastry/home/templates/home.html
@@ -2,7 +2,10 @@
 
 {% block title %}首页{% endblock %}
 
-{% block body %}
+{% block head %}
   {% load staticfiles %}
   <script src="{% static 'scripts/home.js' %}"></script>
+{% endblock %}
+
+{% block body %}
 {% endblock %}
