--- a/pastry/templates/pastry-base.html
+++ b/pastry/templates/pastry-base.html
@@ -7,6 +7,8 @@
   </title>
   {% load staticfiles %}
   <script src="{% static 'scripts/init.js' %}"></script>
+  {% block head %}
+  {% endblock %}
 </head>
 <body>
   {% block body %}
