--- a/pastry/home/templates/home.html
+++ b/pastry/home/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block head %}
   {% load staticfiles %}
-  <script src="{% static 'pastry/home.js' %}"></script>
+  <script src="{% static 'home.js' %}"></script>
 {% endblock %}
 
 {% block body %}
