--- a/pastry/templates/pastry-base.html
+++ b/pastry/templates/pastry-base.html
@@ -6,8 +6,8 @@
     {% block title %}{% endblock %} | {{ request.site.name|title }}
   </title>
   {% load staticfiles %}
-  <script src="{% static 'pastry/commons.js' %}"></script>
-  <link rel="stylesheet" href="{% static 'pastry/commons.css' %}">
+  <script src="{% static 'commons.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'commons.css' %}">
   {% block head %}
   {% endblock %}
 </head>
