--- a/pastry/templates/pastry-base.html
+++ b/pastry/templates/pastry-base.html
@@ -6,7 +6,7 @@
     {% block title %}{% endblock %} | {{ request.site.name|title }}
   </title>
   {% load staticfiles %}
-  <script src="{% static 'commons.js' %}"></script>
+  <script src="{% static 'scripts/commons.js' %}"></script>
   {% block head %}
   {% endblock %}
 </head>
