add static stylus compiling support.

--- a/pastry/home/templates/home.html
+++ b/pastry/home/templates/home.html
@@ -4,6 +4,7 @@
 
 {% block head %}
   {% load staticfiles %}
+  <link rel="stylesheet" href="{% static 'stylesheets/home/home.css' %}">
   <script src="{% static 'scripts/home/home.js' %}"></script>
 {% endblock %}
 
