implement a basic layout of home.

--- a/pastry/home/assets/stylesheets/home.styl
+++ b/pastry/home/assets/stylesheets/home.styl
@@ -1,4 +1,15 @@
-@import 'nib'
+@import 'commons/color'
+@import 'commons/size'
 
-html
-  color: red
+.pastry-top
+  width: $container-width
+  margin: auto
+  margin-top: $primary-text-size
+
+  h1.title
+    color: $primary-text-color
+    font-size: $primary-text-size
+    font-family: sans
+    font-weight: bold
+    text-align: center
+    margin-bottom: ($primary-text-size / 2)
