--- a/pastry/home/templates/home.html
+++ b/pastry/home/templates/home.html
@@ -9,4 +9,7 @@
 {% endblock %}
 
 {% block body %}
+  <header class="pastry-top">
+    <h1 class="title">{{ request.site.name.upper }}</h1>
+  </header>
 {% endblock %}
