--- a/pastry/templates/pastry-base.html
+++ b/pastry/templates/pastry-base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>
-    {% block title %}{% endblock %} | {{ request.site.name|title }}
+    {% block title %}{% endblock %} | {{ request.site.name }}
   </title>
   {% load staticfiles %}
   <link rel="stylesheet" href="{% static 'stylesheets/commons/commons.css' %}">
